Adding more updates for java 8
Adding more updates for java 8